Add .devcontainer.json for easy build sandbox in VSCode.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DATABASE_URL=postgres://postgres:canduma@localhost/canduma
+DATABASE_URL=postgres://postgres:canduma@pg/canduma
 AUTH_SECRET_KEY=GNLw1GKzykA926Rhdcpy1c6lugZXTd5y
-DOMAIN=canduma.localhost.tv
+DOMAIN=localhost
 PORT=3000
-RUST_LOG=warn
+RUST_LOG=debug
